<resources>
    <string name="app_name">Clear benchmark</string>
    <string name="resulting">Результаты теста</string>
    <string name="wall_test">Тест – «Китайская стена»</string>
    <string name="bandwidth_test">Тест – «Пропускная способность»</string>
    <string name="search_test">Тест – «Поиск»</string>
    <string name="setting_test_description">Выберите режим проведение теста</string>
    <string name="radio_button_arithmetic_wall_test">Процессор</string>
    <string name="radio_button_combination_wall_test">Процессор и памяти</string>
    <string name="radio_button_linear_search">Простой алгоритм поиска (с заданным искомым)</string>
    <string name="radio_button_quadratic_search">Сложный алгоритм поиска (без заданного искомого)</string>
    <string name="check_box_arithmetic_bandwidth">Тест на онснове арифметических операций</string>
    <string name="check_box_combination_bandwidth">Тест на основе арифметики и работы с памятью уст - ва</string>
    <string name="filter_button">Поиск</string>
    <string name="tests_menu">Меню</string>
    <string name="filter_text"></string>
    <string name="back_button">Назад</string>
    <string name="bandWidth_test_description">Какое число автомобилей с жителями успеют покинуть город?</string>
    <string name="search_test_description">Сможет ли ваше устройство найти двух братьев?</string>
    <string name="test_information">?</string>

    <string name="leader_title">Лидеры среди устройств</string>

    <string name="show_result">Показать результаты</string>

    <string name="best_result">Лучший результат</string>
    <string name="your_result">Ваш результат</string>
    <string name="worst_result">Худчший результат</string>

    <string name="best_dev">Лучшее устройство</string>
    <string name="your_dev">Ваше устройство</string>
    <string name="worst_dev">Худшее устройство</string>

    <string name="wall_test_tech_topic">Техническое описание</string>
    <string name="application_info">О приложении</string>

    <string name="author">Автор</string>

    <string name="bottom_sheet_pick">Подробнее</string> <!--О тесте -->
    <string name="bottom_sheet_title">Описание теста</string>

    <string name="gryaz">В первом случае выполняется многократное повторонения операции вида a = b * c + d,
        где a, b, c - вещественные числа. \n
        Во втором случае выполняется многократное повторнеие операции вида a[i] = b[i] * c[i] + d[i] </string>

    <string name="technical_description">
        Программная реализация работы тестов основывается на загрузке базовых частей
        вычислительного устройства, а именно, центрального процессора (ЦП) и оперативной памяти (ОП).
        В качестве базовой операции, для полной загрузки ЦП и ОП, производятся интенсивные вычисления над числами
        двойной точности.  вычислительным ядром теста является многократное повторение операций c плавающей точкой
        вида:\n1.res = a * b + c.\n2.res[i] = a[i] * b[i] + c[i].
    </string>

    <string name="bottom_bandwidth_sheet_content">Из – за распространения неизвестного заболевания необходимо
        эвакуировать жителей города в безопасное место. Эвакуация возможна только на автотранспорте. Для того, чтобы
        покинуть город автомобилям необходимо преодолеть пропускной пункт, там каждого человека проверяют на наличие
        заболевания. Последовательность "реальных" действий на пропускном пункте заменена на некоторую последовательность компьютерных операций.
    </string>

    <string name="bottom_search_sheet_content">Необходимо найти двух родственников в пределах группы некоторого размера.
        Время на поиск двух родственников ограничен 15 секундами.Последовательность реальных действий (провести анализ ДНК)
        заменена на некоторую последовательность компьютерных операций.
    </string>

    <string name="bottom_wall_sheet_content">
        Необходимо построить кирпичную стену некоторой длины и предопределенной высоты и ширины. Время на постройку стены ограничено 15 секундами. Последовательность реальных действий (взять кирпич, положить цемент, положить кирпич) заменена на некоторую последовательность компьютерных операций.
    </string>

    <string name="main_page_wall_test">
        \n\nТест проверяет вычислительные возможности мобильного устройства.\nПо окончании теста вы увидите, стена какой длины была \"построена\" за 15 секунд этим мобильным устройством, опираясь на измеренные данные о его производительности. Результат теста - длина стены в метрах. Для того, чтобы \"положить\" один кирпич ваше устройство повторяет базовую операциию 1000 раз.
        Чем длиннее \"построена\" стена, тем быстрее работает устройство. В конце вы сможете сравнить скорость вашего устройства с другими.
        В правом верхнем углу вы можете выбрать режим проведения теста.\n\nВозможно два варианта проведения теста, каждый из которых задействует основные элементы вашего устройства:\n1. Режим максимальной использования центрального процессора.\n2. Режим активной работы центрального процессора и памяти.
    </string>


    <string name="main_page_band_test">
        \n\nТест проверяет вычислительные возможности мобильного устройства.\nПо окончании теста вы увидите, какое количество автомобилей было \"пропущено\" в зону эвакуцаии за 15 секунд этим мобильным устройством, опираясь на измеренные данные о его производительности. Результат теста - количество автомобилей, которые \"прошли\" осмотр. Для того, чтобы \"осмотреть\" один автомобиль ваше устройство повторяет базовую операциию 1000 раз.
        Чем больше было \"пропущено\" автомобилей, тем быстрее работает устройство. В конце вы сможете сравнить скорость вашего устройства с другими.
        В правом верхнем углу вы можете выбрать режим проведения теста.\n\nВозможно два варианта проведения теста, каждый из которых задействует основные элементы вашего устройства:\n1. Режим максимальной использования центрального процессора.\n2. Режим активной работы центрального процессора и памяти.
    </string>

    <string name="main_page_search_test">
        \n\nТест проверяет вычислительные возможности мобильного устройства.\nПо окончании теста вы увидите, сколько было проведено "сравнений" за 15 секунд этим мобильным устройством, опираясь на измеренные данные о его производительности.Результат теста - количество \"сравнений\". Для того, чтобы провести одно \"сравнение\" ваше устройство должно повторить базовую операцию 1000 раз.
        Чем больше \"сравнений\" было проведено, тем быстрее работает устройство, а значит и больше вероятность "найти" родственников. В конце вы сможете сравнить скорость вашего устройства с другими.
        В правом верхнем углу вы можете выбрать режим проведения теста.\n\nВозможно два варианта проведения теста, различной вычислительной сложности:\n1. Режим "линейного" поиска. Есть эталон с котором происходит сравнение.\n2. Режим сравнения каждого с каждым.
    </string>

    <string name="about">
        Приложение содержит набор тестов для определения возможностей и сравнения вашего вычислительного устройства.
        Каждый из тестов задействует различные компоненты устройства, в частности,  центральный процессор или оперативную память. \n \n
        Структура приложения:\n1.Главная страница - три различных теста производительности мобильного устройства.\n2.Список протестированных устройств. В этом же разделе доступна базовая информация обо всех устройствах в списке (необходимо кликнуть на интересующее вас устройство).\n3.Текущий раздел - \"О приложении\".\n
    </string>
</resources>
