<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlueLight"
        tools:context=".TestsActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/container_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
    >

        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBlueDark"
                app:contentInsetStart="0dp">

            <ImageView
                    android:id="@+id/btn_go_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:paddingStart="16dp"
                    android:paddingRight="16dp"
                    android:src="@drawable/ic_arrow_back"
                    android:tint="@color/colorAccent"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.cardview.widget.CardView
            android:id="@+id/wall_test_card"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/container_app_bar" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="20dp">

        <ImageView
                android:id="@+id/wall_test_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_help"/>
        <TextView
                android:id="@+id/wall_test_title"
                android:text="@string/wall_test"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/bandwidth_test_card"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/wall_test_card" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="20dp">

        <ImageView
                android:id="@+id/bandwidth_test_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/lb"/>
        <TextView
                android:id="@+id/bandwidth_test_title"
                android:text="@string/bandwidth_test"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/bandwidth_test_card" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="20dp">

        <ImageView
                android:id="@+id/search_test_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/sc"/>
        <TextView
                android:id="@+id/search_test_title"
                android:text="@string/search_test"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>