<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:card_view="http://schemas.android.com/tools"
              android:id="@+id/res_bottom_sheet"
              android:layout_width="match_parent"
              android:layout_height="400dp"
              android:orientation="vertical"
              android:visibility="visible">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/sub_lll">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/card0"
                android:background="@color/colorWhite"
                app:layout_constraintTop_toTopOf="parent"
                card_view:cardCornerRadius="9dp">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/testTitle"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:text="@string/resulting"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/large_fond"
                        android:textStyle="bold|italic"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/card1"
                android:background="@color/colorWhite"
                app:layout_constraintTop_toTopOf="parent"
                card_view:cardCornerRadius="9dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/bestRes"
                        android:text="@string/best_result"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/small_font_sp"
                        android:textStyle="italic"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/bestDev"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/middle_fond_sp"
                        android:textStyle="italic"/>
                <TextView
                        android:id="@+id/bestVal"
                        android:text=""
                        android:layout_width="100dp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="italic"
                        android:textSize="@dimen/middle_fond_sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/card2"
                android:background="@color/colorWhite"
                app:layout_constraintTop_toTopOf="parent"
                card_view:cardCornerRadius="9dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/yourRes"
                        android:text="@string/your_result"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/small_font_sp"
                        android:textStyle="italic"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/yourDev"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textStyle="italic"
                        android:textSize="@dimen/middle_fond_sp"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|left"/>
                <TextView
                        android:id="@+id/yourVal"
                        android:text=""
                        android:layout_width="100dp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="italic"
                        android:textSize="@dimen/middle_fond_sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/card3"
                android:background="@color/colorWhite"
                app:layout_constraintTop_toTopOf="parent"
                card_view:cardCornerRadius="9dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/worstRes"
                        android:text="@string/worst_result"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/small_font_sp"
                        android:textStyle="italic"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/worstDevice"
                        android:text=""
                        android:textColor="@color/colorBlack"
                        android:textStyle="italic"
                        android:textSize="@dimen/middle_fond_sp"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>
                <TextView
                        android:id="@+id/worstVal"
                        android:text=""
                        android:layout_width="100dp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="italic"
                        android:textSize="@dimen/middle_fond_sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" android:layout_gravity="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>